# rq

./: .coveragerc  .deepsource.toml  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGES.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PR_README.md  README.md  README.rst  __init__.py  _config.yml  appveyor.yml  calcsize.sh  codecov.yml  contrib.md  daemon.py  dev-requirements-36.txt  dev-requirements.txt  dev.Dockerfile  docker-compose.yml  docs-requirements.txt  docs.md  index.md  monitoring.md  py26-requirements.txt  pyproject.toml  requirements.txt  rq-logo.psd  run-tests.sh  (+8 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yaml  coverage.yml  dependencies.yml  docker.yml  lint.yml  test.yml  valkey.yml  workflow.yml
.pytest_cache/v/cache/: lastfailed  nodeids
.sfdx/typings/lwc/sobjects/: Account.d.ts  AccountHistory.d.ts  Asset.d.ts  Attachment.d.ts  Case.d.ts  Contact.d.ts  Contract.d.ts  Domain.d.ts  Lead.d.ts  Note.d.ts  Opportunity.d.ts  Order.d.ts  Pricebook2.d.ts  PricebookEntry.d.ts  Product2.d.ts  RecordType.d.ts  Report.d.ts  Task.d.ts  User.d.ts
_layouts/: default.html  docs.html  patterns.html
contrib/: docs.md  index.md  internals.md  testing.md
css/: reset.css  screen.css
design/: favicon.psd  rq-logo2.psd  rq-logo3.psd
docker/: Dockerfile
docs/: CNAME  _config.yml  benchmark.md  connections.md  exceptions.md  exceptions.py  index.md  internals.md  jobs.md  monitoring.md  results.md  testing.md  workers.md
docs/_includes/: forward.html  ga_tracking.html
docs/_layouts/: chat.html  contrib.html  default.html  docs.html
docs/chat/: index.md  join.html
docs/contrib/: github.md  index.md  testing.md  vagrant.md
docs/css/: screen.css  syntax.css
docs/design/: rq-logo.psd
docs/docs/: connections.md  cron.md  exceptions.md  index.md  job_registries.md  jobs.md  monitoring.md  results.md  scheduling.md  testing.md  workers.md
docs/patterns/: django.md  index.md  sentry.md  supervisor.md  systemd.md
docs/rq_internals/: rate_limit.md
docssphinx/: api.rst  chat.md  chat.rst  conf.py  gettingstarted.md  gettingstarted.rst  index.md  index.rst
docssphinx/_static/: darkmode.js  rq.css  syntax.css  template.css
docssphinx/_templates/: badges.html  darkmode.html  globaltoc.html  layout.html  localtoc.html  relations.html
docssphinx/contrib/: docs.md  docs.rst  github.md  github.rst  index.md  index.rst  internals.md  internals.rst  testing.md  testing.rst  vagrant.md  vagrant.rst
docssphinx/docs/: connections.md  connections.rst  exceptions.md  exceptions.rst  index.md  index.rst  job_registries.md  job_registries.rst  jobs.md  jobs.rst  monitoring.md  monitoring.rst  queues.md  queues.rst  results.md  results.rst  scheduling.md  scheduling.rst  testing.md  testing.rst  workers.md  workers.rst
docssphinx/patterns/: django.md  django.rst  heroku.md  heroku.rst  index.md  index.rst  sentry.md  sentry.rst  supervisor.md  supervisor.rst  systemd.md  systemd.rst
examples/: count_words_at_url.py  fib.py  file_numbers.py  rnd_delay.py  run_count_words_example.py  run_example.py  run_example_dependent.py  run_example_dependents.py  run_gevent_worker.py  run_numbers_example.py  run_video_encoding.py  run_worker.py  run_worker_round_robin.py  video_encoding.py
patterns/: django.md  index.md  sentry.md  supervisor.md
rq/: __init__.py  __init__.pyi  batch.py  command.py  compat.py  config.py  conn.py  connections.py  connections.pyi  cron.py  cron_scheduler_registry.py  daemon.py  decorators.py  decorators.pyi  defaults.py  defaults.pyi  dependency.py  dev-requirements-36.txt  dummy.py  dummy.pyi  exceptions.py  exceptions.pyi  executions.py  group.py  handlers.py  intermediate_queue.py  job.py  job.pyi  job_lifecycle.py  keys.py  local.py  local.pyi  logutils.py  logutils.pyi  main.py  maintenance.py  namespace.py  pickle.py  proxy.py  queue.py  (+27 more)
rq/cli/: __init__.py  cli.py  cli_cron.py  helpers.py  windows.py  workers.py
rq/compat/: __init__.py  connections.py  dictconfig.py
rq/contrib/: errormator.py  events.py  events.pyi  legacy.py  sentry.py
rq/contrib/utils/: __init__.py  future.py  future.pyi
rq/scripts/: __init__.py  rq.py  rq_cli.py  rqgenload.py  rqinfo.py  rqingo.py  rqscheduler.py  rqworker.py
rq/worker/: __init__.py  async_worker.py  base.py  worker_classes.py
rq_scheduler/: __init__.py  scheduler.py
rq_scheduler/scripts/: rqscheduler.py
tests/: Dockerfile  __init__.py  bootstrap_redis.sh  cron_config.py  executable_python_file.py  fixtures.py  helpers.py  test_async_worker.py  test_batch.py  test_callbacks.py  test_cancellation_race_condition.py  test_cli.py  test_commands.py  test_config.py  test_connection.py  test_cron.py  test_cron_job.py  test_cron_scheduler_registry.py  test_decorator.py  test_dependencies.py  test_errormator.py  test_executions.py  test_explicit_deferred.py  test_fixtures.py  test_group.py  test_helpers.py  test_intermediate_queue.py  test_job.py  test_job_dependency.py  test_job_lifecycle.py  test_job_started_registry.py  test_key_prefix.py  test_maintenance.py  test_multiprocessing_worker.py  test_namespace.py  test_queue.py  test_queue_unique.py  test_rate_limit.py  test_registry.py  test_repeat.py  (+17 more)
tests/config_files/: dummy.py  dummy_logging.py  dummy_override.py  sentry.py
tests/ssl_config/: cacerts.pem  private.pem  redis-1.key  redis-1.pem  redis-2.key  redis-2.pem  redis-3.key  redis-3.pem  redis.key  redis.pem  stunnel.conf
tests/ssl_config/cluster/: cacerts.pem  redis-2.key  redis-3.key
